fix painting spacing on homepage (mobile)

--- a/css/desktop.scss
+++ b/css/desktop.scss
@@ -18,6 +18,11 @@
 	  }
 	}
 
+  /* reset a.painting */
+  a.painting {
+    margin: 0;
+  }
+
   #wall-2021 {
     ul {
       margin: 1em auto;
